--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "models"]
 	path = models
 	url = https://github.com/tensorflow/models
+[submodule "tensorflow-yolov4-tflite"]
+	path = tensorflow-yolov4-tflite
+	url = https://github.com/hunglc007/tensorflow-yolov4-tflite
