--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/dataset/
+/logs/
+/weights/
+
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
